// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="this is the first test description."
      id="1"
      key="1"
      note="this is note first."
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-259200000}
      description="this is the rent."
      id="2"
      key="2"
      note="House rent."
    />
    <ExpenseListItem
      amount={4500}
      createdAt={259200000}
      description="this vehicle rent."
      id="3"
      key="3"
      note="fee."
    />
  </div>
</div>
`;

exports[`should render message with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        Expenses list is empty.
      </p>
    </div>
  </div>
</div>
`;
